--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -1,4 +1,5 @@
 {
   "Home": "Accueil",
-  "Loading": "En cours de chargement"
+  "Loading": "En cours de chargement",
+  "Try again": "Réessayer"
 }
