home page -> feeds (not done commit)

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -1,5 +1,7 @@
 {
+  "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
   "Loading": "تحميل",
+  "Read more...": "اقرأ أكثر...",
   "Try again": "حاول مجددا"
 }
