--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -1,5 +1,7 @@
 {
+  "Health news": "Health news",
   "Home": "Accueil",
   "Loading": "Loading",
+  "Read more...": "Read more...",
   "Try again": "Try again"
 }
