--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -1,5 +1,7 @@
 {
+  "Health news": "Infos santé",
   "Home": "Accueil",
   "Loading": "En cours de chargement",
+  "Read more...": "Lire la suite...",
   "Try again": "Réessayer"
 }
