create LogoImage.js component

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -2,6 +2,7 @@
   "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
   "Loading": "تحميل",
+  "Logo image": "صورة الشعار",
   "Read more...": "اقرأ أكثر...",
   "Try again": "حاول مجددا"
 }
