--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -2,6 +2,7 @@
   "Health news": "Infos santé",
   "Home": "Accueil",
   "Loading": "En cours de chargement",
+  "Logo image": "Image logo",
   "Read more...": "Lire la suite...",
   "Try again": "Réessayer"
 }
