--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -2,6 +2,7 @@
   "Health news": "Health news",
   "Home": "Accueil",
   "Loading": "Loading",
+  "Logo image": "Logo image",
   "Read more...": "Read more...",
   "Try again": "Try again"
 }
