--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -1,9 +1,18 @@
 {
+  "Ar": "Ar",
+  "Arabic": "Arabic",
   "Contact us": "Contact us",
+  "En": "En",
+  "English": "English",
+  "Fr": "Fr",
+  "France flag": "France flag",
+  "French": "French",
   "Health news": "Health news",
   "Home": "Accueil",
   "Loading": "Loading",
   "Logo image": "Logo image",
+  "Morocco flag": "Morocco flag",
   "Read more...": "Read more...",
-  "Try again": "Try again"
+  "Try again": "Try again",
+  "United States flag": "United States flag"
 }
