begin Header.js && add HKButtonIcon.js and tests

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -13,6 +13,8 @@
   "Logo image": "صورة الشعار",
   "Morocco flag": "علم المغرب",
   "Read more...": "اقرأ أكثر...",
+  "Sign in icon": "أيقونة تسجيل الدخول",
+  "Sign up icon": "أيقونة التسجيل",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة"
 }
