--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -13,6 +13,8 @@
   "Logo image": "Logo image",
   "Morocco flag": "Morocco flag",
   "Read more...": "Read more...",
+  "Sign in icon": "Sign in icon",
+  "Sign up icon": "Sign up icon",
   "Try again": "Try again",
   "United States flag": "United States flag"
 }
