--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -13,6 +13,8 @@
   "Logo image": "Image logo",
   "Morocco flag": "Drapeau du Maroc",
   "Read more...": "Lire la suite...",
+  "Sign in icon": "Icône de connexion",
+  "Sign up icon": "Icône d'inscription",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis"
 }
