add css to SignInUpModal header

--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -13,7 +13,9 @@
   "Logo image": "Logo image",
   "Morocco flag": "Morocco flag",
   "Read more...": "Read more...",
+  "Sign in": "Sign in",
   "Sign in icon": "Sign in icon",
+  "Sign up": "Sign up",
   "Sign up icon": "Sign up icon",
   "Try again": "Try again",
   "United States flag": "United States flag"
