--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -13,7 +13,9 @@
   "Logo image": "Image logo",
   "Morocco flag": "Drapeau du Maroc",
   "Read more...": "Lire la suite...",
+  "Sign in": "Connexion",
   "Sign in icon": "Icône de connexion",
+  "Sign up": "Inscription",
   "Sign up icon": "Icône d'inscription",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis"
