--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -13,7 +13,9 @@
   "Logo image": "صورة الشعار",
   "Morocco flag": "علم المغرب",
   "Read more...": "اقرأ أكثر...",
+  "Sign in": "تسجيل الدخول",
   "Sign in icon": "أيقونة تسجيل الدخول",
+  "Sign up": "التسجيل",
   "Sign up icon": "أيقونة التسجيل",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة"
