begin signup modal

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -13,6 +13,7 @@
   "Logo image": "صورة الشعار",
   "Morocco flag": "علم المغرب",
   "Read more...": "اقرأ أكثر...",
+  "Choose a country": "اختر بلدا",
   "Sign in": "تسجيل الدخول",
   "Sign in icon": "أيقونة تسجيل الدخول",
   "Sign up": "التسجيل",
