--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -13,6 +13,7 @@
   "Logo image": "Logo image",
   "Morocco flag": "Morocco flag",
   "Read more...": "Read more...",
+  "Choose a country": "Choose a country",
   "Sign in": "Sign in",
   "Sign in icon": "Sign in icon",
   "Sign up": "Sign up",
