--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -13,6 +13,7 @@
   "Logo image": "Image logo",
   "Morocco flag": "Drapeau du Maroc",
   "Read more...": "Lire la suite...",
+  "Choose a country": "Choisissez un pays",
   "Sign in": "Connexion",
   "Sign in icon": "Icône de connexion",
   "Sign up": "Inscription",
