add HKTextarea.js && HKTextarea.test.js, HKInput.test.js, HKSelect.test.js

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -1,14 +1,18 @@
 {
+  "Address": "العنوان",
   "Ar": "عر",
   "Arabic": "العربية",
   "Contact us": "اتصل بنا",
+  "Country": "البلد",
   "En": "انج",
   "English": "الانجليزية",
+  "First name": "الإسم",
   "Fr": "فر",
   "France flag": "علم فرنسا",
   "French": "الفرنسية",
   "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
+  "Last name": "اللقب",
   "Loading": "تحميل",
   "Logo image": "صورة الشعار",
   "Morocco flag": "علم المغرب",
