--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -1,14 +1,18 @@
 {
+  "Address": "Address",
   "Ar": "Ar",
   "Arabic": "Arabic",
   "Contact us": "Contact us",
+  "Country": "Country",
   "En": "En",
   "English": "English",
+  "First name": "First name",
   "Fr": "Fr",
   "France flag": "France flag",
   "French": "French",
   "Health news": "Health news",
   "Home": "Accueil",
+  "Last name": "Last name",
   "Loading": "Loading",
   "Logo image": "Logo image",
   "Morocco flag": "Morocco flag",
