--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -1,14 +1,18 @@
 {
+  "Address": "Adresse",
   "Ar": "Ar",
   "Arabic": "Arabe",
   "Contact us": "Contactez-nous",
+  "Country": "Pays",
   "En": "An",
   "English": "Anglais",
+  "First name": "Prénom",
   "Fr": "Fr",
   "France flag": "Drapeau de la France",
   "French": "Français",
   "Health news": "Infos santé",
   "Home": "Accueil",
+  "Last name": "Nom",
   "Loading": "En cours de chargement",
   "Logo image": "Image logo",
   "Morocco flag": "Drapeau du Maroc",
