add check_if_email_or_username_exists && HKGender.js && HKGender.test.js

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -4,17 +4,21 @@
   "Arabic": "العربية",
   "Contact us": "اتصل بنا",
   "Country": "البلد",
+  "Email": "البريد الالكتروني",
   "En": "انج",
   "English": "الانجليزية",
+  "Female": "أنثى",
   "First name": "الإسم",
   "Fr": "فر",
   "France flag": "علم فرنسا",
   "French": "الفرنسية",
+  "Gender": "الجنس",
   "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
   "Last name": "اللقب",
   "Loading": "تحميل",
   "Logo image": "صورة الشعار",
+  "Male": "ذكر",
   "Morocco flag": "علم المغرب",
   "Read more...": "اقرأ أكثر...",
   "Choose a country": "اختر بلدا",
@@ -23,5 +27,6 @@
   "Sign up": "التسجيل",
   "Sign up icon": "أيقونة التسجيل",
   "Try again": "حاول مجددا",
-  "United States flag": "علم الولايات المتحدة"
+  "United States flag": "علم الولايات المتحدة",
+  "Username": "اسم المستخدم"
 }
