--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -4,17 +4,21 @@
   "Arabic": "Arabic",
   "Contact us": "Contact us",
   "Country": "Country",
+  "Email": "Email",
   "En": "En",
   "English": "English",
+  "Female": "Female",
   "First name": "First name",
   "Fr": "Fr",
   "France flag": "France flag",
   "French": "French",
+  "Gender": "Gender",
   "Health news": "Health news",
   "Home": "Accueil",
   "Last name": "Last name",
   "Loading": "Loading",
   "Logo image": "Logo image",
+  "Male": "Male",
   "Morocco flag": "Morocco flag",
   "Read more...": "Read more...",
   "Choose a country": "Choose a country",
@@ -23,5 +27,6 @@
   "Sign up": "Sign up",
   "Sign up icon": "Sign up icon",
   "Try again": "Try again",
-  "United States flag": "United States flag"
+  "United States flag": "United States flag",
+  "Username": "Username"
 }
