--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -4,17 +4,21 @@
   "Arabic": "Arabe",
   "Contact us": "Contactez-nous",
   "Country": "Pays",
+  "Email": "Email",
   "En": "An",
   "English": "Anglais",
+  "Female": "Femme",
   "First name": "Prénom",
   "Fr": "Fr",
   "France flag": "Drapeau de la France",
   "French": "Français",
+  "Gender": "Genre",
   "Health news": "Infos santé",
   "Home": "Accueil",
   "Last name": "Nom",
   "Loading": "En cours de chargement",
   "Logo image": "Image logo",
+  "Male": "Homme",
   "Morocco flag": "Drapeau du Maroc",
   "Read more...": "Lire la suite...",
   "Choose a country": "Choisissez un pays",
@@ -23,5 +27,6 @@
   "Sign up": "Inscription",
   "Sign up icon": "Icône d'inscription",
   "Try again": "Réessayer",
-  "United States flag": "Drapeau des États-Unis"
+  "United States flag": "Drapeau des États-Unis",
+  "Username": "Nom d'utilisateur"
 }
