add HKDate.js and HKPassword.js

--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -2,8 +2,10 @@
   "Address": "Address",
   "Ar": "Ar",
   "Arabic": "Arabic",
+  "Confirm password": "Confirm password",
   "Contact us": "Contact us",
   "Country": "Country",
+  "Date of Birth": "Date of Birth",
   "Email": "Email",
   "En": "En",
   "English": "English",
@@ -13,6 +15,7 @@
   "France flag": "France flag",
   "French": "French",
   "Gender": "Gender",
+  "Good": "Good",
   "Health news": "Health news",
   "Home": "Accueil",
   "Last name": "Last name",
@@ -20,13 +23,19 @@
   "Logo image": "Logo image",
   "Male": "Male",
   "Morocco flag": "Morocco flag",
+  "Okay": "Okay",
+  "Password": "Password",
+  "Passwords not match": "Passwords not match",
   "Read more...": "Read more...",
   "Choose a country": "Choose a country",
   "Sign in": "Sign in",
   "Sign in icon": "Sign in icon",
   "Sign up": "Sign up",
   "Sign up icon": "Sign up icon",
+  "Strong": "Strong",
+  "Too short": "Too short",
   "Try again": "Try again",
   "United States flag": "United States flag",
-  "Username": "Username"
+  "Username": "Username",
+  "Weak": "Weak"
 }
