--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -2,8 +2,10 @@
   "Address": "Adresse",
   "Ar": "Ar",
   "Arabic": "Arabe",
+  "Confirm password": "Confirmez le mot de passe",
   "Contact us": "Contactez-nous",
   "Country": "Pays",
+  "Date of Birth": "Date de naissance",
   "Email": "Email",
   "En": "An",
   "English": "Anglais",
@@ -13,6 +15,7 @@
   "France flag": "Drapeau de la France",
   "French": "Français",
   "Gender": "Genre",
+  "Good": "Bon",
   "Health news": "Infos santé",
   "Home": "Accueil",
   "Last name": "Nom",
@@ -20,13 +23,19 @@
   "Logo image": "Image logo",
   "Male": "Homme",
   "Morocco flag": "Drapeau du Maroc",
+  "Okay": "Bien",
+  "Password": "Mot de passe",
+  "Passwords not match": "Les mots de passe ne correspondent pas",
   "Read more...": "Lire la suite...",
   "Choose a country": "Choisissez un pays",
   "Sign in": "Connexion",
   "Sign in icon": "Icône de connexion",
   "Sign up": "Inscription",
   "Sign up icon": "Icône d'inscription",
+  "Strong": "Fort",
+  "Too short": "Trop court",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis",
-  "Username": "Nom d'utilisateur"
+  "Username": "Nom d'utilisateur",
+  "Weak": "Faible"
 }
