--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -2,8 +2,10 @@
   "Address": "العنوان",
   "Ar": "عر",
   "Arabic": "العربية",
+  "Confirm password": "تأكيد كلمة المرور",
   "Contact us": "اتصل بنا",
   "Country": "البلد",
+  "Date of Birth": "تاريخ الميلاد",
   "Email": "البريد الالكتروني",
   "En": "انج",
   "English": "الانجليزية",
@@ -13,6 +15,7 @@
   "France flag": "علم فرنسا",
   "French": "الفرنسية",
   "Gender": "الجنس",
+  "Good": "جيد",
   "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
   "Last name": "اللقب",
@@ -20,13 +23,19 @@
   "Logo image": "صورة الشعار",
   "Male": "ذكر",
   "Morocco flag": "علم المغرب",
+  "Okay": "حسن",
+  "Password": "كلمة المرور",
+  "Passwords not match": "كلمات المرور غير متطابقة",
   "Read more...": "اقرأ أكثر...",
   "Choose a country": "اختر بلدا",
   "Sign in": "تسجيل الدخول",
   "Sign in icon": "أيقونة تسجيل الدخول",
   "Sign up": "التسجيل",
   "Sign up icon": "أيقونة التسجيل",
+  "Strong": "قوي",
+  "Too short": "قصير جدا",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة",
-  "Username": "اسم المستخدم"
+  "Username": "اسم المستخدم",
+  "Weak": "ضعيف"
 }
