begin terms of service

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -34,6 +34,7 @@
   "Sign up": "التسجيل",
   "Sign up icon": "أيقونة التسجيل",
   "Strong": "قوي",
+  "Terms of service": "شروط الخدمة",
   "Too short": "قصير جدا",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة",
