--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -34,6 +34,7 @@
   "Sign up": "Sign up",
   "Sign up icon": "Sign up icon",
   "Strong": "Strong",
+  "Terms of service": "Terms of service",
   "Too short": "Too short",
   "Try again": "Try again",
   "United States flag": "United States flag",
