--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -34,6 +34,7 @@
   "Sign up": "Inscription",
   "Sign up icon": "Icône d'inscription",
   "Strong": "Fort",
+  "Terms of service": "Conditions d'utilisation",
   "Too short": "Trop court",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis",
