add terms of service && begin data use policy

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -5,6 +5,7 @@
   "Confirm password": "تأكيد كلمة المرور",
   "Contact us": "اتصل بنا",
   "Country": "البلد",
+  "Data use policy": "سياسة استخدام البيانات",
   "Date of Birth": "تاريخ الميلاد",
   "Email": "البريد الالكتروني",
   "En": "انج",
@@ -18,6 +19,7 @@
   "Good": "جيد",
   "Health news": "أخبار الصحة",
   "Home": "الصفحة الرئيسية",
+  "Item": "مادة",
   "Last name": "اللقب",
   "Loading": "تحميل",
   "Logo image": "صورة الشعار",
