--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -5,6 +5,7 @@
   "Confirm password": "Confirm password",
   "Contact us": "Contact us",
   "Country": "Country",
+  "Data use policy": "Data use policy",
   "Date of Birth": "Date of Birth",
   "Email": "Email",
   "En": "En",
@@ -18,6 +19,7 @@
   "Good": "Good",
   "Health news": "Health news",
   "Home": "Accueil",
+  "Item": "Item",
   "Last name": "Last name",
   "Loading": "Loading",
   "Logo image": "Logo image",
