--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -5,6 +5,7 @@
   "Confirm password": "Confirmez le mot de passe",
   "Contact us": "Contactez-nous",
   "Country": "Pays",
+  "Data use policy": "Politique d'utilisation des données",
   "Date of Birth": "Date de naissance",
   "Email": "Email",
   "En": "An",
@@ -18,6 +19,7 @@
   "Good": "Bon",
   "Health news": "Infos santé",
   "Home": "Accueil",
+  "Item": "Article",
   "Last name": "Nom",
   "Loading": "En cours de chargement",
   "Logo image": "Image logo",
