add data use policy

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -2,6 +2,7 @@
   "Address": "العنوان",
   "Ar": "عر",
   "Arabic": "العربية",
+  "Close": "إغلاق",
   "Confirm password": "تأكيد كلمة المرور",
   "Contact us": "اتصل بنا",
   "Country": "البلد",
