--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -2,6 +2,7 @@
   "Address": "Address",
   "Ar": "Ar",
   "Arabic": "Arabic",
+  "Close": "Close",
   "Confirm password": "Confirm password",
   "Contact us": "Contact us",
   "Country": "Country",
