--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -2,6 +2,7 @@
   "Address": "Adresse",
   "Ar": "Ar",
   "Arabic": "Arabe",
+  "Close": "Fermer",
   "Confirm password": "Confirmez le mot de passe",
   "Contact us": "Contactez-nous",
   "Country": "Pays",
