add cookies policy

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -5,6 +5,7 @@
   "Close": "إغلاق",
   "Confirm password": "تأكيد كلمة المرور",
   "Contact us": "اتصل بنا",
+  "Cookies and other storage technologies": "ملفات تعريف الارتباط وتقنيات التخزين الأخرى",
   "Country": "البلد",
   "Data use policy": "سياسة استخدام البيانات",
   "Date of Birth": "تاريخ الميلاد",
