--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -5,6 +5,7 @@
   "Close": "Close",
   "Confirm password": "Confirm password",
   "Contact us": "Contact us",
+  "Cookies and other storage technologies": "Cookies and other storage technologies",
   "Country": "Country",
   "Data use policy": "Data use policy",
   "Date of Birth": "Date of Birth",
