--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -5,6 +5,7 @@
   "Close": "Fermer",
   "Confirm password": "Confirmez le mot de passe",
   "Contact us": "Contactez-nous",
+  "Cookies and other storage technologies": "Cookies et autres technologies de stockage",
   "Country": "Pays",
   "Data use policy": "Politique d'utilisation des données",
   "Date of Birth": "Date de naissance",
