begin validate form

--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -27,6 +27,7 @@
   "Logo image": "Image logo",
   "Male": "Homme",
   "Morocco flag": "Drapeau du Maroc",
+  "Network error!": "Erreur réseau !",
   "Okay": "Bien",
   "Password": "Mot de passe",
   "Passwords not match": "Les mots de passe ne correspondent pas",
@@ -39,6 +40,9 @@
   "Sign up icon": "Icône d'inscription",
   "Strong": "Fort",
   "Terms of service": "Conditions d'utilisation",
+  "This email is invalid.": "Cette adresse email est invalide.",
+  "This field is required.": "Ce champ est obligatoire.",
+  "This username is invalid.": "Ce nom d'utilisateur n'est pas valide.",
   "Too short": "Trop court",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis",
