--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -27,6 +27,7 @@
   "Logo image": "صورة الشعار",
   "Male": "ذكر",
   "Morocco flag": "علم المغرب",
+  "Network error!": "خطأ في الشبكة!",
   "Okay": "حسن",
   "Password": "كلمة المرور",
   "Passwords not match": "كلمات المرور غير متطابقة",
@@ -39,6 +40,9 @@
   "Sign up icon": "أيقونة التسجيل",
   "Strong": "قوي",
   "Terms of service": "شروط الخدمة",
+  "This email is invalid.": "هذا البريد الإلكتروني غير صالح.",
+  "This field is required.": "هدا الحقل اجباري.",
+  "This username is invalid.": "اسم المستخدم هذا غير صالح.",
   "Too short": "قصير جدا",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة",
