add Signupconfirmationmodal.js and TextDiv.js and their tests

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -50,5 +50,6 @@
   "Username": "اسم المستخدم",
   "Username or email": "اسم المستخدم أو البريد الالكتروني",
   "Weak": "ضعيف",
-  "You don't have an account yet? Register here.": "ليس لديك حساب؟ سجل من هنا."
+  "You don't have an account yet? Register here.": "ليس لديك حساب؟ سجل من هنا.",
+  "Your account is created": "تم إنشاء حسابك"
 }
