--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -50,5 +50,6 @@
   "Username": "Username",
   "Username or email": "Username or email",
   "Weak": "Weak",
-  "You don't have an account yet? Register here.": "You don't have an account yet? Register here."
+  "You don't have an account yet? Register here.": "You don't have an account yet? Register here.",
+  "Your account is created": "Your account is created"
 }
