--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -50,5 +50,6 @@
   "Username": "Nom d'utilisateur",
   "Username or email": "Nom d'utilisateur ou email",
   "Weak": "Faible",
-  "You don't have an account yet? Register here.": "Vous n'avez pas encore de compte ? Inscrivez-vous ici."
+  "You don't have an account yet? Register here.": "Vous n'avez pas encore de compte ? Inscrivez-vous ici.",
+  "Your account is created": "Votre compte est créé."
 }
