--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -40,9 +40,9 @@
   "Sign up icon": "أيقونة التسجيل",
   "Strong": "قوي",
   "Terms of service": "شروط الخدمة",
-  "This email is invalid.": "هذا البريد الإلكتروني غير صالح.",
-  "This field is required.": "هدا الحقل اجباري.",
-  "This username is invalid.": "اسم المستخدم هذا غير صالح.",
+  "This email is invalid": "هذا البريد الإلكتروني غير صالح",
+  "This field is required": "هذا الحقل اجباري",
+  "This username is invalid": "اسم المستخدم هذا غير صالح",
   "Too short": "قصير جدا",
   "Try again": "حاول مجددا",
   "United States flag": "علم الولايات المتحدة",
