--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -40,9 +40,9 @@
   "Sign up icon": "Sign up icon",
   "Strong": "Strong",
   "Terms of service": "Terms of service",
-  "This email is invalid.": "This email is invalid.",
-  "This field is required.": "This field is required.",
-  "This username is invalid.": "This username is invalid.",
+  "This email is invalid": "This email is invalid",
+  "This field is required": "This field is required",
+  "This username is invalid": "This username is invalid",
   "Too short": "Too short",
   "Try again": "Try again",
   "United States flag": "United States flag",
