rename phone attribute for user to mobile_phne

--- a/healthkools/src/translations/ar/translations.json
+++ b/healthkools/src/translations/ar/translations.json
@@ -27,6 +27,7 @@
   "Loading": "تحميل",
   "Logo image": "صورة الشعار",
   "Male": "ذكر",
+  "Mobile phone number": "رقم المحمول",
   "Morocco flag": "علم المغرب",
   "Network error!": "خطأ في الشبكة!",
   "Okay": "حسن",
