--- a/healthkools/src/translations/en/translations.json
+++ b/healthkools/src/translations/en/translations.json
@@ -27,6 +27,7 @@
   "Loading": "Loading",
   "Logo image": "Logo image",
   "Male": "Male",
+  "Mobile phone number": "Mobile phone number",
   "Morocco flag": "Morocco flag",
   "Network error!": "Network error!",
   "Okay": "Okay",
