--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -27,6 +27,7 @@
   "Loading": "En cours de chargement",
   "Logo image": "Image logo",
   "Male": "Homme",
+  "Mobile phone number": "Numéro de téléphone mobile",
   "Morocco flag": "Drapeau du Maroc",
   "Network error!": "Erreur réseau !",
   "Okay": "Bien",
