--- a/healthkools/src/translations/fr/translations.json
+++ b/healthkools/src/translations/fr/translations.json
@@ -1,10 +1,14 @@
 {
   "Address": "Adresse",
   "Already have an account? Log in here.": "Vous avez déjà un compte? Connectez-vous ici.",
+  "An error has occurred. Please try again or contact the development team.": "Une erreur est survenue. Veuillez réessayer ou contacter l'équipe de développement.",
   "Ar": "Ar",
   "Arabic": "Arabe",
+  "Change": "Changer",
+  "Choose a country": "Choisissez un pays",
   "Close": "Fermer",
   "Confirm password": "Confirmez le mot de passe",
+  "Confirm": "Confirmer",
   "Contact us": "Contactez-nous",
   "Cookies and other storage technologies": "Cookies et autres technologies de stockage",
   "Country": "Pays",
@@ -36,7 +40,7 @@
   "Passwords not match": "Les mots de passe ne correspondent pas",
   "Phone number": "Numéro de téléphone",
   "Read more...": "Lire la suite...",
-  "Choose a country": "Choisissez un pays",
+  "Select": "Sélectionner",
   "Sign in": "Connexion",
   "Sign in icon": "Icône de connexion",
   "Sign up": "Inscription",
@@ -49,9 +53,11 @@
   "Too short": "Trop court",
   "Try again": "Réessayer",
   "United States flag": "Drapeau des États-Unis",
+  "Uploading...": "Téléchargement...",
   "Username": "Nom d'utilisateur",
   "Username or email": "Nom d'utilisateur ou email",
   "Weak": "Faible",
   "You don't have an account yet? Register here.": "Vous n'avez pas encore de compte ? Inscrivez-vous ici.",
-  "Your account is created": "Votre compte est créé."
+  "Your account is created": "Votre compte est créé.",
+  "You must validate the cropping or delete the selected image": "Vous devez valider le recadrage ou supprimer l'image sélectionnée"
 }
